[skip ci] fix/Correcting bucket color parse